# rafikone-cli

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
src/rafikone/: config.py  creator.py  display.py  interactive.py  main.py  models.py  numbering.py  opener.py  pdf.py  scanner.py
src/rafikone/dashboard/: app.py  router.py
src/rafikone/dashboard/screens/: __init__.py  detail.py  help.py  home.py  list.py  search.py  settings.py  stats.py
