[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rafikone"
version = "1.1.0"
description = "Ubuntu CLI Quotation Manager"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
rafikone = "rafikone.main:app"

[tool.setuptools.packages.find]
where = ["src"]
